Added RSS to _footer and tweaked CV

--- a/_footer.html
+++ b/_footer.html
@@ -9,6 +9,6 @@
 <li><a href="http://clippings.tumblr.com">Clippings</a></li>
 </ul>
 </div></div>
-<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">License</a> & <a href="colophon.html">Colophon.</a> |  This site is hand-coded with <a href="http://www.johnmacfarlane.net/pandoc">Pandoc</a> and Unix.</p>
+<p>This site is hand-coded with <a href="http://www.johnmacfarlane.net/pandoc">Pandoc</a> and Unix. | <a href="colophon.html">Colophon</a> | <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">License</a> | <a href="feed.xml">RSS</a></p>
 
 <!--End contents of _footer.html which are inserted using the include-after-body option in pandoc.-->
