Adjustments for site redesign

--- a/_navigation.html
+++ b/_navigation.html
@@ -11,11 +11,11 @@ var sc_security="cc89e61f";
 
 <noscript><div class="statcounter"><a class="statcounter" href="http://www.statcounter.com/"><img class="statcounter" src="http://c30.statcounter.com/2874620/0/cc89e61f/0/" alt="invisible hit counter" /></a></div></noscript>
 
-<center><h3>W. Caleb McDaniel<a href="index.html"><img src="./images/photo.jpg" height=60px style="margin: 10px 10px 0px 10px"></a>Assistant Professor of History</h3></center>
+<center><h3>W. Caleb McDaniel<a href="index.html"><img src="./images/photo.jpg" height=55px style="margin: 5px 10px 0px 10px"></a>Assistant Professor of History</h3></center>
 <div id="header">
 <div id="navigation">
         <ul>
-			<li><a href="./index.html">Home</a></li>
+			<li><a href="./index.html">About</a></li>
             <li><a href="./cv.html">CV</a></li>
             <li><a href="./research.html">Research</a></li>
             <li><a href="./teaching.html">Teaching</a></li>
