Posting pandoc-on-ios; updating other files

--- a/_footer.html
+++ b/_footer.html
@@ -1,14 +1,34 @@
 <!--Begin contents of _footer.html which are inserted using the include-after-body option in pandoc.-->
 
-<div id="footer">
-<div id="navigation">
-<ul>
-<li>Find me on:</li>
-<li><a href="http://www.twitter.com/wcaleb">Twitter</a></li>
-<li><a href="http://pinboard.in/u:wcaleb">Pinboard</a></li>
-<li><a href="http://clippings.tumblr.com">Clippings</a></li>
-</ul>
-</div></div>
-<p>This site is hand-coded with <a href="http://www.johnmacfarlane.net/pandoc">Pandoc</a> and Unix. | <a href="colophon.html">Colophon</a> | <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">License</a> | <a href="feed.xml">RSS</a></p>
+<!--Sidebar-->
+
+<p><em><small>This site is hand-coded with <a href="http://www.johnmacfarlane.net/pandoc">Pandoc</a>, as explained on the <a href="colophon.html">Colophon</a>. <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">BY-SA.</a></small></em></p>
+		<ul class="nav nav-pills">
+			<li class="transparent"><script type="text/javascript">
+			<!--
+			h='&#114;&#x69;&#x63;&#x65;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x63;&#x61;&#108;&#x65;&#98;&#46;&#x6d;&#x63;&#100;&#x61;&#110;&#x69;&#x65;&#108;';e=n+a+h;
+			document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<img src='+'"./img/glyph_em'+'ail.png"'+'>'+'<\/'+'a'+'>');
+			// -->
+			</script><noscript>&#x63;&#x61;&#108;&#x65;&#98;&#46;&#x6d;&#x63;&#100;&#x61;&#110;&#x69;&#x65;&#108;&#32;&#x61;&#116;&#32;&#114;&#x69;&#x63;&#x65;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>
+			</li>
+			<li class="transparent"><a href="http://www.twitter.com/wcaleb" title="My Twitter feed" class="transparent"><img src="./img/glyph_twitter.png"></a></li>
+			<li class="transparent"><a href="http://pinboard.in/u:wcaleb" title="My Pinboard"><img src="./img/glyph_pinboard.png"></a></li>
+			<li class="transparent"><a href="http://clippings.tumblr.com" title="My Tumblr blog, Clippings"><img src="./img/glyph_tumblr.png"></a></li>
+			<li class="transparent"><a href="http://github.com/wcaleb" title="My Github repos"><img src="./img/glyph_github.png"></a></li>
+			<li class="transparent"><a href="./feed.xml" title="RSS Feed for Recent Posts"><img src="./img/glyph_rss.png"></a></li>
+		</ul>
+
+<!--Statcounter-->
+
+<script type="text/javascript">
+var sc_project=2874620; 
+var sc_invisible=0; 
+var sc_partition=29; 
+var sc_security="cc89e61f"; 
+</script>
+
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script>
+
+<noscript><div class="statcounter"><a class="statcounter" href="http://www.statcounter.com/"><img class="statcounter" src="http://c30.statcounter.com/2874620/0/cc89e61f/0/" alt="invisible hit counter" /></a></div></noscript>
 
 <!--End contents of _footer.html which are inserted using the include-after-body option in pandoc.-->
