--- a/_navigation.html
+++ b/_navigation.html
@@ -1,26 +1,14 @@
 <!--Begin contents of _navigation.html which are inserted using the include-before-body option in pandoc.-->
 
-<script type="text/javascript">
-var sc_project=2874620; 
-var sc_invisible=0; 
-var sc_partition=29; 
-var sc_security="cc89e61f"; 
-</script>
-
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script>
-
-<noscript><div class="statcounter"><a class="statcounter" href="http://www.statcounter.com/"><img class="statcounter" src="http://c30.statcounter.com/2874620/0/cc89e61f/0/" alt="invisible hit counter" /></a></div></noscript>
-
-<center><h3>W. Caleb McDaniel<a href="index.html"><img src="./images/photo.jpg" height=55px style="margin: 5px 10px 0px 10px"></a>Assistant Professor of History</h3></center>
 <div id="header">
-<div id="navigation">
-        <ul>
-			<li><a href="./index.html">About</a></li>
-            <li><a href="./cv.html">CV</a></li>
-            <li><a href="./research.html">Research</a></li>
-            <li><a href="./teaching.html">Teaching</a></li>
-            <li><a href="./hacks.html">Hacks</a></li>
+        <ul class= "nav nav-pills pull-right">
+            <li class="hidden-phone"><a href="./cv.html">CV</a></li>
+            <li class="hidden-phone"><a href="./research.html">Research</a></li>
+            <li class="hidden-phone"><a href="./teaching.html">Teaching</a></li>
+            <li class="hidden-phone"><a href="./hacks.html">Hacks</a></li>
+			<li class="visible-phone"><a href="./index.html#site-map">&larr; Site Map</a></li>
+			<li><a href="index.html"><img src="./images/photo.jpg" class="pull-left"></a></li>
         </ul>
-</div></div>
+</div>
 
 <!--End contents of _navigation.html which are inserted using the include-before-body option in pandoc.-->
