--- a/_footer.html
+++ b/_footer.html
@@ -1,12 +1,13 @@
 <!--Begin contents of _footer.html which are inserted using the include-after-body option in pandoc.-->
 
-<!--Sidebar-->
+<!--Footer-->
 
-<p><em><small>This site is hand-coded with <a href="http://www.johnmacfarlane.net/pandoc">Pandoc</a>, as explained on the <a href="colophon.html">Colophon</a>. <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">BY-SA.</a></small></em></p>
-		<ul class="nav nav-pills">
-			<li class="transparent"><script type="text/javascript">
+<footer>
+
+		<ul class="nav nav-pills pull-right hidden-phone">
+            <li class="transparent"><script type="text/javascript">
 			<!--
-			h='&#114;&#x69;&#x63;&#x65;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x63;&#x61;&#108;&#x65;&#98;&#46;&#x6d;&#x63;&#100;&#x61;&#110;&#x69;&#x65;&#108;';e=n+a+h;
+			h='&#114;&#x69;&#x63;&#x65;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x63;&#x61;&#108;&#x65;&#98;#46;&#x6d;&#x63;&#100;&#x61;&#110;&#x69;&#x65;&#108;';e=n+a+h;
 			document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+'<img src='+'"./img/glyph_em'+'ail.png"'+'>'+'<\/'+'a'+'>');
 			// -->
 			</script><noscript>&#x63;&#x61;&#108;&#x65;&#98;&#46;&#x6d;&#x63;&#100;&#x61;&#110;&#x69;&#x65;&#108;&#32;&#x61;&#116;&#32;&#114;&#x69;&#x63;&#x65;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>
@@ -15,8 +16,16 @@
 			<li class="transparent"><a href="http://pinboard.in/u:wcaleb" title="My Pinboard"><img src="./img/glyph_pinboard.png"></a></li>
 			<li class="transparent"><a href="http://clippings.tumblr.com" title="My Tumblr blog, Clippings"><img src="./img/glyph_tumblr.png"></a></li>
 			<li class="transparent"><a href="http://github.com/wcaleb" title="My Github repos"><img src="./img/glyph_github.png"></a></li>
-			<li class="transparent"><a href="./feed.xml" title="RSS Feed for Recent Posts"><img src="./img/glyph_rss.png"></a></li>
 		</ul>
+
+<ul class="nobullet">
+<li><a href="colophon.html">Colophon/</a></li>
+<li><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">License/</a></li>
+<li><a href="./feed.xml">RSS/</a></li>
+<li class="visible-phone"><a href="./index.html#contact">Contact/</a></li>
+</ul>
+
+</footer>
 
 <!--Statcounter-->
 
