--- a/_navigation.html
+++ b/_navigation.html
@@ -1,13 +1,12 @@
 <!--Begin contents of _navigation.html which are inserted using the include-before-body option in pandoc.-->
-
-<div id="header">
+<div class="header">
         <ul class= "nav nav-pills pull-right">
             <li class="hidden-phone"><a href="./cv.html">CV</a></li>
-            <li class="hidden-phone"><a href="./research.html">Research</a></li>
-            <li class="hidden-phone"><a href="./teaching.html">Teaching</a></li>
-            <li class="hidden-phone"><a href="./hacks.html">Hacks</a></li>
+            <li class="hidden-phone"><a href="./research.html">Research/</a></li>
+            <li class="hidden-phone"><a href="./teaching.html">Teaching/</a></li>
+            <li class="hidden-phone"><a href="./hacks.html">Hacks/</a></li>
 			<li class="visible-phone"><a href="./index.html#site-map">&larr; Site Map</a></li>
-			<li><a href="index.html"><img src="./images/photo.jpg" class="pull-left"></a></li>
+			<li><a href="index.html"><img src="./photo.jpg" class="pull-left"></a></li>
         </ul>
 </div>
 
